[package]
name = "computer_network_assignment_1"
version = "0.1.0"
authors = ["Quinn Pollock <contact@quinnpollock.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99.6"
futures-preview = { version = "0.3.0-alpha.18", features = [ "async-await", "nightly" ] }
